--- a/docs/configs/basic.conf
+++ b/docs/configs/basic.conf
@@ -9,6 +9,7 @@ DefaultServer			on
 
 # Port 21 is the standard FTP port.
 Port				21
+
 # Umask 022 is a good standard umask to prevent new dirs and files
 # from being group and world writable.
 Umask				022
@@ -18,22 +19,28 @@ Umask				022
 # at once, simply increase this value.  Note that this ONLY works
 # in standalone mode, in inetd mode you should use an inetd server
 # that allows you to limit maximum number of processes per service
-# (such as xinetd)
+# (such as xinetd).
 MaxInstances			30
 
-# Set the user and group that the server normally runs at.
+# Set the user and group under which the server will run.
 User				nobody
 Group				nogroup
 
+# To cause every FTP user to be "jailed" (chrooted) into their home
+# directory, uncomment this line.
+#DefaultRoot ~
+
 # Normally, we want files to be overwriteable.
-<Directory /*>
+<Directory />
   AllowOverwrite		on
 </Directory>
 
-# A basic anonymous configuration, no upload directories.
+# A basic anonymous configuration, no upload directories.  If you do not
+# want anonymous users, simply delete this entire <Anonymous> section.
 <Anonymous ~ftp>
   User				ftp
   Group				ftp
+
   # We want clients to be able to login with "anonymous" as well as "ftp"
   UserAlias			anonymous ftp
 
@@ -49,5 +56,4 @@ Group				nogroup
   <Limit WRITE>
     DenyAll
   </Limit>
-
 </Anonymous>
