docs/*.html should depend on the included header/footer, too

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,9 +1,10 @@
 EPERL = eperl
 
 INCDIR = ../include
+EPLINCS = $(INCDIR)/footer.epl $(INCDIR)/header.epl
 HTMLFILES = $(addsuffix .html, $(basename $(wildcard *.epl)))
 
-%.html: %.epl
+%.html: %.epl $(EPLINCS)
 	$(EPERL) -P -I $(INCDIR) $< >./$@
 
 all: $(HTMLFILES) $(EPLINCS)
